--- a/templates/index.html
+++ b/templates/index.html
@@ -16,6 +16,7 @@
     <div class="actions">
         <input id="labelField" name="label" type="text" placeholder="Nombre" required/>
         <button id="takePhotoButton">Take Photo</button>
+        <button id="enrollButton" class="hidden">Enroll Photos</button>
     </div>
 
     <div class="media-capture">
